# yolo-toolkit

./: .env.example  .gitignore  IMPLEMENTATION.md  README.md  cli.py  docker-compose.yml  export_and_train.sh  files.txt  generate_dotenv.sh  ls_settings.json  ls_settings.json.example  main.py  project_2_2.json  pyproject.toml  requirements.txt  reset_label_studio_local.sh  setup_localstorage.sh  setup_ls.sh  test_api.py  train.sh
.github/: copilot-instructions.md
label_studio_data/: label_studio.sqlite3
scripts/: 1_start_labelstudio.py  2_create_project.py  2_create_project_and_upload.py  3_train_project.py  3_upload_images.py  4_export_yolo.py  4_predict_unlabeled.py  5_train_yolo.py  6_predict_unlabeled.py  check_storage.py  config.py  delete_project.py  fix_storage.py
src/label_studio_sdk_wrapper/: config.py  config_label.py
